relay-pii/src/snapshots/relay_pii__processor__tests__redact_containers.snap
---
source: relay-pii/src/processor.rs
expression: event
---
{
  "extra": null,
  "_meta": {
    "extra": {
      "": {
        "rem": [
          [
            "@anything",
            "x"
          ]
        ]
      }
    }
  }
}
