relay-pii/src/snapshots/relay_pii__processor__tests__redact_custom_pattern.snap
---
source: relay-pii/src/processor.rs
expression: event
---
{
  "extra": {
    "myvalue": "asdbar"
  },
  "_meta": {
    "extra": {
      "myvalue": {
        "": {
          "rem": [
            [
              "myrule",
              "s",
              0,
              3
            ]
          ],
          "len": 6
        }
      }
    }
  }
}
