relay-pii/src/snapshots/relay_pii__processor__tests__scrub_span_data_http_not_scrubbed.snap
---
source: relay-pii/src/processor.rs
expression: span
---
{
  "data": {
    "http": {
      "query": "dance=true"
    }
  }
}
