relay-pii/src/snapshots/relay_pii__processor__tests__scrub_span_data_http_objects_are_scrubbed.snap
---
source: relay-pii/src/processor.rs
expression: span
---
{
  "data": {
    "http": {
      "fragment": {
        "ccnumber": "[Filtered]",
        "process_id": "123"
      },
      "query": {
        "ccnumber": "[Filtered]",
        "process_id": "123"
      }
    }
  },
  "_meta": {
    "data": {
      "http": {
        "fragment": {
          "ccnumber": {
            "": {
              "rem": [
                [
                  "@creditcard:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 16
            }
          }
        },
        "query": {
          "ccnumber": {
            "": {
              "rem": [
                [
                  "@creditcard:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 16
            }
          }
        }
      }
    }
  }
}
